[tool.poetry]
name = "dohna-dohna-script"
version = "0.1.0"
description = "アリスソフト「ドーナドーナ」の自作ジンザイ用の画像に変換するためのスクリプト。"
authors = ["darkeroticism <5till1v1atic@gmail.com>"]
readme = "README.md"
packages = [{include = "dohna_dohna_script"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.74"
numpy = "^1.25.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.1.0"

# isortとblackが競合するので設定変更
[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
